--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -915,7 +915,10 @@ TODO: Do we need an example?
   transition-timing-function: ease-out;
   margin: 0 auto;
 }
+
+// 1. Relative position is needed to center children horizontally.
 .swiper-slide {
+  position: relative; // [1]
   float: left;
 }
 
