--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -485,6 +485,11 @@ TODO: Do we want an example of a swiper in the styleguide?
   height: inherit !important; // [1]
 }
 
+// 1. Inherit height for vertical swiper slides.
+.swiper-container [swiper-type="page"] {
+  height: inherit;  // [1]
+}
+
 // 1. Fix crash on some iPhones when swiping.
 .swiper-slide {
   width: 100%;  // [1]
