Added skeleton for toaster

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -84,6 +84,7 @@ Text colors
 @color-error: #e22c09;
 @color-logo: #000000;
 @color-text-active: #0098ea;
+@color-toaster: #c1c1c1;
 
 /*
 Default colors for input elements
